<resources>
    <string name="app_name">Submission_5_MADE</string>
    <string name="title_movie">Movies</string>
    <string name="title_movie_detail">Detail Movies</string>
    <string name="title_favorite_movie">Favorite Movies</string>
    <string name="title_favorite_movie_detail">Detail Favorite Movies</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="title_tv_show_detail">Detail Tv Show</string>
    <string name="title_favorite_tv_show">Favorite Tv Show</string>
    <string name="title_favorite_tv_show_detail">DetailFavorite Tv Show</string>
    <string name="content_tab_movies">This Movies</string>
    <string name="content_favorite_tab_movies">This Favorite Movies</string>
    <string name="content_tab_tv_show">This Tv Show</string>
    <string name="content_favorite_tab_tv_show">This Favorite Tv Show</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_name">Movies Name</string>
    <string name="description">Description</string>
    <string name="text_rate">Rate :</string>
    <string name="nilai_rate">Nilai</string>
    <string name="language_string">en-EN</string>
    <string name="movies_date">Date</string>
    <string name="title_rate">7.8</string>
    <string name="empety">Favorite is still empty</string>
    <string name="search">Search</string>
    <string name="search_hint">Input Name Movie</string>
    <string name="category_movie">movie</string>
    <string name="empety_search_movie">Movie Search None</string>
    <string name="category_tv">tv</string>
    <string name="appwidget_text">FAVORITE MOVIE</string>
    <string name="empty_text">NO DATA</string>
    <string name="add_widget">Add widget</string>
    <string name="banner_favorite">Banner Favorite</string>
    <string name="name_favorite">Name Favorite</string>
    <string name="image_widget_favorite">Image Widget Favorite</string>
    <string name="image_movie">Image Movie</string>
    <string name="banner_image_background_favorite">Banner Image Background Favorite</string>
    <string name="banner_indication_favorite">Banner Indication Favorite</string>
    <string name="imgae_item_favorit_widget">Imgae Item Favorit Widget</string>
    <string name="string_75">75</string>
    <string name="image_detail">Image Detail</string>
    <string name="background_favorite">Background Favorite</string>
    <string name="image_favorite">Image Favorite</string>
    <string name="failed_load_data">Failed Load Data</string>
    <string name="setting_reminder">Setting Reminder</string>
    <string name="daily_reminder_application">Daily Reminder Application</string>
    <string name="time">time</string>
    <string name="click_arrange_your_time">arrange your time</string>
    <string name="daily_reminder_release_today">Daily Reminder Release Today</string>
    <string name="Setting">Setting</string>
    <string name="category_favorite">Favorite Movie</string>
</resources>
