<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <StackView
            android:id="@+id/stack_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:loopViews="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_layer"
                    android:contentDescription="@string/banner_image_background_favorite" />

                <ImageView
                    android:id="@+id/img_favorite"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_favorite_black"
                    android:contentDescription="@string/banner_indication_favorite" />

            </FrameLayout>
            <TextView
                android:id="@+id/banner_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_weight="1"
                android:text="@string/appwidget_text"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:layout_marginRight="30dp"
                android:textStyle="bold"
                android:layout_marginEnd="30dp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:text="@string/empty_text"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

</FrameLayout>